Adding general font - Roboto light 30

--- a/Ace training/LoginPage.html
+++ b/Ace training/LoginPage.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Ace Login</title>
 	<link href="styles.css" rel="stylesheet" type="text/css"/>
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
