--- a/Ace training/registerForm.html
+++ b/Ace training/registerForm.html
@@ -3,6 +3,11 @@
 <head>
 	<link href="styles.css" rel="stylesheet" type="text/css"/>
 	<title>Ace Register</title>
+	
+	<!-- links font style 'roboto' to the webpage -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <h1>
 	<p>
