Added container around intro and new image

--- a/webDevYear2/index.html
+++ b/webDevYear2/index.html
@@ -30,17 +30,19 @@
             </ul>
         </nav>
 
-        <div class = "pic-container">
-            <img src="images/mainpagemainphoto.png" class ="MainPhoto"  style="width: 350%">
-        </div>
+        <div class="welcomeContainer"> 
+            <div class = "pic-container">
+                <img src="images/mainPagePhoto.jpeg" class ="MainPhoto"  style="width: 350%">
+            </div>
 
-        <div class ="text-container">
-            <h1>Welcome To Ace Training</h1>
-            <p>As a student, it is important to have academic skills.
-                 However, it can be difficult to improve these skills on your own.
-                That is where Ace Training comes in. Ace Training is a website made by students for students that helps you improve your academic skills.</p>
-            <a href="contact.html">Contact Us! </a>
-        </div>
+            <div class ="text-container">
+                <h1>Welcome To Ace Training</h1>
+                <p>As a student, it is important to have academic skills.
+                    However, it can be difficult to improve these skills on your own.
+                    That is where Ace Training comes in. Ace Training is a website made by students for students that helps you improve your academic skills.</p>
+                <a href="contact.html">Contact Us! </a>
+            </div>
+        </div> 
 
 
         <h1>&nbsp;</h1>
