--- a/registerForm.html
+++ b/registerForm.html
@@ -1,82 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Ace Academy Register Form</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script defer src="registerScript.js"></script>
+    <title>Registration</title>
 </head>
-<h1>
-	<p>
-		Register To Ace Training
-	</p>
-</h1>
-<h3>
-	<p>
-		Please Sign Up 
-	</p>
-</h3>
 <body>
-<form>
-	<table>
-		<tr>
-			<td>
-				First Name:
-			</td>
-			<td>
-				<input type ="text" placeholder ="First Name" name ="">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Last Name:
-			</td>
-			<td>
-				<input type = "text" placeholder="Last Name" name ="">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Password
-			</td>
-			<td>
-				<input type = "Password" placeholder="Password" name ="">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Gender:
-			</td>
-			<td>
-				<input type = "radio" name ="Gender">Male
-				<input type = "radio" name = "Gender">Female
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Email:
-			</td>
-			<td>
-				<input type ="email" placeholder="Email" name="">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Phone Number:
-			</td>
-			<td>
-				<select>
-					<option>+44</option>
-					<option>+971</option>
-					<option>+40</option>
-					<option>+35</option>
-				</select>
-				<input type ="Phone" palceholder ="+44785*****" name="">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type = "Submit" value ="Submit" name ="">
-			</td>
-		</tr>
-	</table>
-</form>
+    <form id="form" action="/" method="get">
+        <div>
+            <div class="input-control">
+            <label for="First">First Name</label>
+            <input id="First" name="First" type="text">
+            </div>
+        </div>
+
+        <div>
+            <div class="input-control">
+            <label for="Last">Last Name</label>
+            <input id="Last" name="Last" type="text">
+            </div>
+        </div>
+
+        <div>
+            <div class="input-control">
+            <label for="Password">Password</label>
+            <input id="Password" name="Password" type="password">
+            </div>
+        </div>
+
+        <div>
+            <div class="input-control">
+            <label for="Gender">Gender</label>
+            <input type="radio" id="Gender">Male
+            <input type="radio" id="Gender">Female
+            </div>
+        </div>
+
+        <div>
+            <div class="input-control">
+            <label for="Email">Email</label>
+            <input id="Email" name="Email" type="email">
+            </div>
+        </div>
+
+        <div>
+            <div class="input-control">
+            <label for="Phone">Phone Number</label>
+            <select>
+                <option>+44</option>
+                <option>+971</option>
+                <option>+40</option>
+                <option>+35</option>
+            </select>
+
+            <input id="Phone" name="Phone" type="tel">
+            </div>
+        </div>
+
+        <button type="submit">submit</button>
+
+    </form>
 </body>
 </html>
