--- a/webDevYear2/login.html
+++ b/webDevYear2/login.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
 
-        <div class = "block">
+        <div class = "loginContainer">
             <form action="/action_page.php">
 
                 Email:<input type="text" id="email" placeholder="example@email.com">
