--- a/webDevYear2/contact.html
+++ b/webDevYear2/contact.html
@@ -16,22 +16,38 @@
             <img src="images/logo.png" class ="logo" width="50" height="50">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.php">Home</a>
                 </li>
                 <li>
-                    <a href="login.html">Login</a>
+                    <a href="login.php">Login</a>
                 </li>
                 <li>
-                    <a href="register.html">Register</a>
+                    <a href="register.php">Register</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="about.php">About</a>
                 </li>
             </ul>
         </nav>
 
         <div class = "pic-container">
-            <img src="menu/camera.png" class ="MainPhoto" width="100" height="100">
+            
+        </div>
+
+        <h1>&nbsp;</h1>
+
+        <h2 class="why-ace">Any Questions? Drop us a Message!</h2>
+
+        <div class="loginContainer">
+
+        <form action = "https://formsubmit.co/attila_bertalan2@yahoo.com" method="POST">
+
+            <input type="text" name="name" placeholder="Name" required>
+            <input type="email" name="email" placeholder="Email Address" required>
+            <input type="text" name="Message" placeholder="Message" required>
+            <button type="submit" class="submitButton">Send</button> 
+        </form>
+
         </div>
 
 
@@ -41,4 +57,4 @@
     
 </body>
 
-</html>l
+</html>
