--- a/webDevYear2/about.html
+++ b/webDevYear2/about.html
@@ -33,6 +33,25 @@
         <div class = "pic-container">
             <img src="logo/camera.png" class ="MainPhoto" width="100" height="100">
         </div>
+   <br><br>
+    <div class="why-ace-div">
+        <a class="why-ace">Story of Ace Training</a>
+    </div>
+
+    <div class="why-ace-text">
+    <br>
+    Ace Training was founded to help students of all ages reach their academic goals. We are an online platform that offers a wide variety of courses, from languages to math and science. 
+    Each course is designed to be engaging and help the student gain the skills they need to succeed. 
+    Our expert instructors are passionate about teaching and offer personalized support and guidance.
+    <br>
+    <br>
+    Ace Training is a website dedicated to providing resources to help students learn. 
+    It was founded in 2010 with the goal of making learning more accessible to individuals and organizations around the world. 
+    Our team consists of experienced educators and professionals from different academic disciplines who have a shared passion for teaching. 
+    We have developed a comprehensive suite of online courses, tutorials, and resources that have helped thousands of learners master their academic subjects.
+
+
+    </div>
 
 
 
