--- a/webDevYear2/index.html
+++ b/webDevYear2/index.html
@@ -22,7 +22,7 @@
                     <a href="login.html">Login</a>
                 </li>
                 <li>
-                    <a href="register.html">Register</a>
+                    <a href="register.php">Register</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
