--- a/webDevYear2/index.html
+++ b/webDevYear2/index.html
@@ -32,7 +32,7 @@
 
         <div class="welcomeContainer"> 
             <div class = "pic-container">
-                <img src="images/mainPagePhoto.jpeg" class ="MainPhoto"  style="width: 350%">
+                <img src="images/mainpagemainphoto.jpg" class ="MainPhoto"  style="width: 350%">
             </div>
 
             <div class ="text-container">
